+ Get data articles retrofit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.DetailActivity"></activity>
+        <activity android:name=".view.SplashActivity"></activity>
+        <activity android:name=".view.DetailActivity" />
         <activity android:name=".view.SearchActivity" />
-        <activity android:name=".view.SplashActivity">
+        <activity android:name=".view.NewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
